Changed code from Activity Oriented to Fragment Oriented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="result_not_found">Result Not Found!!</string>
     <string name="scan_error">COuld Not Scan The Provided QR Code! Please Try Again Later</string>
     <string name="refresh">Data Refreshed!!</string>
+    <string name="offline_msg">You are offline now</string>
 
 </resources>
